--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,9 +5,11 @@ Version 4.1
 
 2. Flatzinc interface for JaCoP's floating point constraints.
 
-3. Fixing a bug in knapsack constraints when large numbers are used.
+3. Scala interface for floating point constraints.
 
-4. Implementing intersection method between SmallDenseDomain and BoundDomain.
+4. Fixing a bug in knapsack constraints when large numbers are used.
+
+5. Implementing intersection method between SmallDenseDomain and BoundDomain.
 
 Version 4.0
 ===========
