--- a/CHANGELOG
+++ b/CHANGELOG
@@ -16,7 +16,12 @@ Version 4.2.1
 4. Sets of integer with bounds 1..0 are treated by flatzinc parser as
    empty sets. This implements a way minizinc 2.0 represents empty sets.
 
-5. Bug fixes.
+5. Adding int_pow build-in predicate to flatzinc interpreter.
+
+6. For flatzinc we generate LexOrder global constraints if two vectors
+   are of the same size and Lex decomposed constraint otherwise.
+
+7. Bug fixes.
 	
 Version 4.2
 ===========
