--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,9 +28,9 @@ Version 4.5
 9. Adding floating-point constraints log2 and log10 to flatzinc to
    JaCoP compiler.
 
-10. Two new classes for debugging and statistics
-   gathering. VariableTrace prints out variables prunings during
-   search. FailConstraintsStatistics gather number of fails for each
+10. Two new classes for debugging and statistics gathering.
+   VariableTrace prints out variables prunings during search.
+   FailConstraintsStatistics gather number of fails for each
    constraints and class of constraints.
 
 11. New cumulative constraints. CumulativeBasic does time-tabling
@@ -50,15 +50,18 @@ Version 4.5
     constraints: Nooverlap and two CumulativeBasic constraints in
     direction X and Y.
 
-13. Calls to new cumulative and diffn constraints in Scala wrapper.
+13. New Table and SimpleTable (number of table entries =< 64)
+    constraints based on compact-table representation.
 
-14. New method for constraint generation for flatzinc.
+14. Calls to new cumulative, diffn and table constraints in Scala wrapper.
 
-15. Making JaCoP compatible with Scala 2.12.
+15. New method for constraint generation for flatzinc.
 
-16. Improvement in pruning for MinSimple and MaxSimple.
+16. Making JaCoP compatible with Scala 2.12.
 
-17. Bug fixes:
+17. Improvement in pruning for MinSimple and MaxSimple.
+
+18. Bug fixes:
    - Changing comparator method in LinearFloat that
      IllegalArgumentException is not reported.
    - Correcting bugs in AndBool, OrBool and AndBoolSimple.
@@ -69,8 +72,11 @@ Version 4.5
      when BoolClause fails and reified variable is false.
    - Bug fix in SumInt that stopped the propagator from computing a
      fix-point in some situations.
+   - Bug fix in method inComplement that did not generated event
+     "BOUND" when bounds in the domain was changed (generated "ANY"
+     instead).
 
-18. Different Maven profiles for testing (commit, push, release) that
+19. Different Maven profiles for testing (commit, push, release) that
     will execute different lengths tests in Maven test phase using 
     Minizinc tests stored in src/test/fz/ directory. 
 	
