--- a/CHANGELOG
+++ b/CHANGELOG
@@ -25,7 +25,10 @@ Version 4.6
 6. New version of Alldiff constraints that uses new algorithm with
    complexity O(n logn) instead of O(n^2).
 
-7. Bug fix in sequential search when there is float_search after
+7. Improvements in subcircuit constraint. It applies "expensive"
+   domiance pruning if SCC did not pruned anything.
+
+8. Bug fix in sequential search when there is float_search after
    set_search.
 
 Version 4.5
