--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,7 +38,10 @@ Version 4.6
     minizinc 2.2 (both stand-alone and IDE) and fzn-jacop sctipt to be
     used to call JaCoP solve.
 
-11.Bug fix in sequential search when there is float_search after
+11. New print-out of statistics for flatzinc that follows minizinc 2.2
+    standard.
+
+12.Bug fix in sequential search when there is float_search after
    set_search.
 
 Version 4.5
