--- a/CHANGELOG
+++ b/CHANGELOG
@@ -41,8 +41,12 @@ Version 4.6
 11. New print-out of statistics for flatzinc that follows minizinc 2.2
     standard.
 
-12.Bug fix in sequential search when there is float_search after
-   set_search.
+12. Definition of flatzinc library global constraint
+    alldifferent_except0 using global_cardinality_low_up_closed.
+    Related changes of generation of JaCoP GCC constraint.
+
+13. Bug fix in sequential search when there is float_search after
+    set_search.
 
 Version 4.5
 =============
