New variable selection methods based on accumulated failure count. Both for Java and flatzinc.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,8 +3,10 @@ Version 4.7
 
 1. Introduction of restart search both in JaCoP and flatzinc.
 
-2. Making WeightedDegree variable selection method working
-   correctly. Adding variable selection method dom_w_deg to flatzinc.
+2. Making WeightedDegree variable selection method working correctly;
+   availble in flatzinc as dom_w_deg. Adding new variable selection
+   methods based on accumulated failur count (AFC); defined in
+   flatzinc also.
 
 3. Small corrections in pom.xml to use right version of Scala.
 
