--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,8 +5,8 @@ Version 4.7
 
 2. Making WeightedDegree variable selection method working correctly;
    availble in flatzinc as dom_w_deg. Adding new variable selection
-   methods based on accumulated failur count (AFC); defined in
-   flatzinc also.
+   methods based on accumulated failur count (AFC) and pruning
+   activity; defined in flatzinc also.
 
 3. Small corrections in pom.xml to use right version of Scala.
 
